# zero2prod-rust

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  prek.toml  spec.yaml
.github/workflows/: ci.yml
.sqlx/: query-39a76ca87097dab85c9d35ea5e98720b3c2c44c87222a4d5a4f4a6cbbdecca9e.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260307034252_create_subscriptions_table.sql  20260308140344_add_status_to_subsciprtions.sql  20260308141805_make_status_not_null_in_subscriptions.sql  20260308141942_create_subscription_tokens_table.sql  20260312101241_create_users_table.sql  20260312132814_rename_password_column.sql  20260312145250_add_salt_to_users.sql  20260314011810_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
