[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.13.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
env_logger = "0.11.9"
log = "0.4.29"
tracing = { version = "0.1.44", features = ["log"] }


[dependencies.sqlx]
version = "0.8.6"
default-features =  false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13.2" 
