[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.13.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.21"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.20.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }


[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
fake = { version = "4.4.0", features = ["derive"] }
linkify = "0.10.0"
once_cell = "1.21.3"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
wiremock = "0.6.5"
